<resources>
    <string name="app_name">Impactio Project</string>
    <string name="project_name">Project Name</string>
    <string name="profile">:</string>
    <string name="welcome_back">Welcome Back, </string>
    <string name="placeholder_name">William</string>
    <string name="welcome_message">Glad to see you back</string>
    <string name="project1">Project 1</string>
    <string name="project2">Project 2</string>
    <string name="enrolled_project">Current Enrolled Project:</string>
    <string name="enrolled_project_title">Reduced Inequality</string>
    <string name="project1_description">test1</string>
    <string name="project2_description">test2</string>
    <string name="sort_by_all">All</string>
    <string name="sort_by_progress">In Progress</string>
    <string name="sort_by_reviewed">To Be Reviewed</string>
    <string name="sort_by_completed">Completed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="project_status">Project Status:</string>
    <string name="good_status">Good</string>
    <string name="review_required">Review Required</string>
    <string name="running_behind">Running Behind</string>
    <string name="Update">Update</string>
    <string name="post">Post</string>
    <string name="project_members">Project Members</string>
    <string name="project_timeline">Project Timeline</string>
    <string name="Project_activity">Project Activity</string>
    <string name="Post_history">Post History</string>
    <string name="details">Details</string>
    <string name="name1">Claudia Alves</string>
    <string name="project_update1">Updated Criteria #21</string>
    <string name="update_time1">1h ago</string>
    <string name="add">Add</string>
    <string name="tracker_add">Add Tracker Criteria Name</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="loading">Loading...</string>
    <string name="finish">Finish</string>
    <string name="points">Points</string>
    <string name="funding_amount">Funding Amount</string>
</resources>