<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailActivity">

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/enrolled_project_title"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/project_status"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_title" />

    <Button
        android:id="@+id/btn_update_tracking"
        android:layout_width="168dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="20dp"
        android:text="@string/Update"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tracker_points" />

    <Button
        android:id="@+id/btn_post_activity"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="20dp"
        android:text="@string/post"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/btn_update_tracking"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_tracker_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/good_status"
        android:textColor="#62F641"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/dodd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="/250"
        android:textColor="#0E120D"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_tracker_points"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/project_timeline"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
        app:layout_constraintTop_toBottomOf="@+id/btn_update_tracking" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:text="@string/Project_activity"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <Button
        android:id="@+id/btn_timeline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="@+id/btn_post_activity"
        app:layout_constraintTop_toTopOf="@+id/textView16"
        app:layout_constraintVertical_bias="0.551" />

    <Button
        android:id="@+id/btn_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        app:layout_constraintBottom_toBottomOf="@+id/textView17"
        app:layout_constraintEnd_toEndOf="@+id/btn_timeline"
        app:layout_constraintTop_toTopOf="@+id/textView17" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/name1" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="45dp"
            android:text="@string/project_update1" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="30dp"
            android:text="@string/update_time1" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="SDG"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_title" />

    <TextView
        android:id="@+id/test_display2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="2, 4"
        app:layout_constraintStart_toEndOf="@+id/display"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_title" />

    <TextView
        android:id="@+id/c1_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toEndOf="@+id/c1_display_name3"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/c1_display_name3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="C1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/c1_display_name4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="C2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c1_display_name3" />

    <TextView
        android:id="@+id/c1_display_name6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="C3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c1_display_name4" />

    <TextView
        android:id="@+id/c4_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c1_display_name6" />

    <TextView
        android:id="@+id/c2_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toEndOf="@+id/c1_display_name4"
        app:layout_constraintTop_toBottomOf="@+id/c1_display_name" />

    <TextView
        android:id="@+id/c3_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toEndOf="@+id/c1_display_name6"
        app:layout_constraintTop_toBottomOf="@+id/c2_display_name" />

    <TextView
        android:id="@+id/c4_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toEndOf="@+id/c1_display_name6"
        app:layout_constraintTop_toBottomOf="@+id/c3_display_name" />

    <TextView
        android:id="@+id/c2_display_sdg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toEndOf="@+id/c2_display_name"
        app:layout_constraintTop_toBottomOf="@+id/c1_display_sdg" />

    <TextView
        android:id="@+id/c3_display_sdg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toEndOf="@+id/c3_display_name"
        app:layout_constraintTop_toBottomOf="@+id/c2_display_sdg" />

    <TextView
        android:id="@+id/c4_display_sdg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toEndOf="@+id/c4_display_name"
        app:layout_constraintTop_toBottomOf="@+id/c3_display_sdg" />

    <TextView
        android:id="@+id/c2_display_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toEndOf="@+id/c2_display_sdg"
        app:layout_constraintTop_toBottomOf="@+id/c1_display_description" />

    <TextView
        android:id="@+id/c3_display_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toEndOf="@+id/c3_display_sdg"
        app:layout_constraintTop_toBottomOf="@+id/c2_display_description" />

    <TextView
        android:id="@+id/c4_display_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toEndOf="@+id/c3_display_sdg"
        app:layout_constraintTop_toBottomOf="@+id/c3_display_description" />

    <TextView
        android:id="@+id/c1_display_sdg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toEndOf="@+id/c1_display_name"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/c1_display_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toEndOf="@+id/c1_display_sdg"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

</androidx.constraintlayout.widget.ConstraintLayout>