<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="363dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <EditText
            android:id="@+id/edit_Funding_Title"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="55dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="Title"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_Funding_Description"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="160dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="Description"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/edit_Funding_Title"
            app:layout_constraintTop_toBottomOf="@+id/edit_Funding_Title" />

        <ImageView
            android:id="@+id/iv_send"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="365dp"
            android:layout_marginLeft="175dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            app:srcCompat="@android:drawable/ic_menu_send" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="370dp"
            android:backgroundTint="#FFFFFF"
            android:progressTint="#66F8CA"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_Funding_Description" />

        <TextView
            android:id="@+id/tv_funding_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:text="@string/Title"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Description"
            android:layout_marginTop="125dp"
            android:layout_marginLeft="10dp"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_funding_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_marginLeft="10dp"
            android:text="@string/funding_amount"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/et_funding_amount"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="285dp"
            android:hint="@string/funding_amount"/>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>